// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component TopCitedPublications should render loading indicator 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    >
      <div
        style="padding: 8px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1s5ig73-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
          />
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
            style="text-align: center;"
          >
            <span
              aria-label="Loading"
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
              role="progressbar"
              style="width: 18px; height: 18px;"
            >
              <svg
                class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="21"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
            style="text-align: center;"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 css-kl1ura-MuiTypography-root"
              style="font-size: 1.33rem;"
            >
              Loading trending works
            </span>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    />
  </div>
</div>
`;

exports[`Component TopCitedPublications should render tabs larger than xs width properly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
    data-testid="standard-card"
    id="standard-card"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
      data-analyticsid="standard-card-content"
      data-testid="standard-card-content"
      id="standard-card-content"
    >
      <div
        class="MuiTabs-root css-1lco6rl-MuiTabs-root"
      >
        <div
          class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
          style="overflow: hidden; margin-bottom: 0px;"
        >
          <div
            class="MuiTabs-list MuiTabs-flexContainer MuiTabs-centered css-1hqdth1-MuiTabs-list"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth Mui-selected css-1ib8lk2-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span>
                Trending on Altmetric
              </span>
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-1ib8lk2-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Trending on Scopus
              </span>
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-1ib8lk2-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span>
                Trending on Web of science
              </span>
            </button>
          </div>
          <span
            class="MuiTabs-indicator css-s8ua9-MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-tqtdln-MuiGridLegacy-root"
        style="margin-top: 24px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-j4livs-MuiTypography-root"
          >
            <div
              class="fez-icon altmetric xxlarge"
            />
            Altmetric score
          </h6>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
          style="margin-top: -12px;"
        >
          <button
            aria-label="Click for more information"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1a0ye8w-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="help-icon"
            data-mui-internal-clone-element="true"
            data-testid="help-icon"
            id="help-icon"
            tabindex="0"
            type="button"
          >
            <svg
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-2y2fa1-MuiSvgIcon-root"
              data-testid="HelpOutlineIcon"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
              <title>
                Click for more information
              </title>
            </svg>
          </button>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          id="topCitedPublications"
          style="padding-top: 24px;"
        >
          <div
            class="MuiBox-root css-0"
            data-testid="search-results-publications-list"
            id="search-results-publications-list"
          >
            <div
              class="publicationCitation"
            >
              <div
                class="css-0"
                data-testid="publication-citation-parent-UQ:330391"
                id="publication-citation-parent-UQ:330391"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                        style="min-width: 1px;"
                      >
                        <h6
                          class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                        >
                          <a
                            href="/view/UQ:330391"
                          >
                            Development and implementation of papillomavirus prophylactic vaccines
                          </a>
                        </h6>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto citationMetrics css-e9j1q9-MuiGridLegacy-root"
                      >
                        <a
                          aria-label="Full citation in Altmetric will open in a new window"
                          class="css-1oqhn84"
                          data-analyticsid="my-trending-pubs-altmetric-link"
                          data-testid="my-trending-pubs-altmetric-link"
                          href="https://queensland.altmetric.com/details/101417"
                          id="my-trending-pubs-altmetric-link"
                          rel="noopener noreferrer"
                          tabindex="0"
                          target="_blank"
                          title="Full citation in Altmetric will open in a new window"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                            >
                              <h6
                                class="MuiTypography-root MuiTypography-h6 difference css-15rj26v-MuiTypography-root"
                                title="Difference in social media activities"
                              >
                                +
                                3
                              </h6>
                            </div>
                          </div>
                        </a>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                      >
                        <div
                          class="citationContent citationJournalArticle"
                        >
                          <span
                            class="citationAuthors"
                          >
                            <span
                              class="citationAuthor"
                              data-testid="rek-author-0"
                            >
                              Frazer, Ian H.
                            </span>
                             
                          </span>
                          <span
                            class="citationDate"
                          >
                            (
                            2014
                            ).
                          </span>
                          <span
                            class="citationTitle"
                          >
                             
                            Development and implementation of papillomavirus prophylactic vaccines
                            .
                          </span>
                          <span
                            class="citationJournalName"
                          >
                             
                            Journal of Immunology
                             
                          </span>
                          <span
                            class="citationVolumeNumber"
                          >
                             
                            192
                             
                          </span>
                          <span
                            class="citationIssueNumber"
                          >
                            (
                            9
                            ) 
                          </span>
                          <span
                            class="citationArticleNumber empty"
                          />
                          <span
                            class="citationPageRange"
                          >
                            <span
                              class="citationStartPage"
                            >
                              4007
                            </span>
                            -
                            <span
                              class="citationEndPage"
                            >
                              4011
                            </span>
                          </span>
                          <span>
                            . 
                          </span>
                          <span
                            data-testid="rek-doi"
                          >
                            <a
                              aria-label="Open this DOI in an new window"
                              class="citationDoiLink css-1oqhn84"
                              data-analyticsid="citation-doi-link"
                              data-testid="citation-doi-link"
                              href="https://doi.org/10.4049/jimmunol.1490012"
                              id="citation-doi-link"
                              rel="noopener noreferrer"
                              tabindex="0"
                              target="_blank"
                              title="Open this DOI in an new window"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
                                data-testid="OpenInNewIcon"
                                focusable="false"
                                id="citation-doi-link-new-window-icon"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                                />
                              </svg>
                              https://doi.org/10.4049/jimmunol.1490012
                            </a>
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                              >
                                <a
                                  aria-label="Full citation in Web of science will open in a new window"
                                  class="wosCitationCount css-si3g8d"
                                  data-analyticsid="wos-citation-count-link"
                                  data-testid="wos-citation-count-link"
                                  href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000334672800003"
                                  id="wos-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Web of science will open in a new window"
                                >
                                  <span
                                    class="fez-icon wos large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    12
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Scopus will open in a new window"
                                  class="scopusCitationCount css-si3g8d"
                                  data-analyticsid="scopus-citation-count-link"
                                  data-testid="scopus-citation-count-link"
                                  href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D2-s2.0-84899524861%26origin%3Dinward"
                                  id="scopus-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Scopus will open in a new window"
                                >
                                  <span
                                    class="fez-icon scopus large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    13
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Altmetric will open in a new window"
                                  class="altmetricCitationCount css-si3g8d"
                                  data-analyticsid="altmetric-citation-count-link"
                                  data-testid="altmetric-citation-count-link"
                                  href="https://queensland.altmetric.com/details/2291601"
                                  id="altmetric-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Altmetric will open in a new window"
                                >
                                  <span
                                    class="fez-icon altmetric large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    5
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Google scholar will open in a new window"
                                  class="googleCitationCount css-si3g8d"
                                  data-analyticsid="google-citation-count-link"
                                  data-testid="google-citation-count-link"
                                  href="https://scholar.google.com/scholar?q=intitle:Development%20and%20implementation%20of%20papillomavirus%20prophylactic%20vaccines"
                                  id="google-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Google scholar will open in a new window"
                                >
                                  <span
                                    class="fez-icon google large"
                                  />
                                </a>
                                <span
                                  class="noOaIcon"
                                  data-testid="oa-n/a-icon"
                                />
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                              />
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component TopCitedPublications should render top cited publications module with not available message 1`] = `
<div>
  <div
    data-testid="alert"
    style="margin-top: 5px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-1q04yrf-MuiGridLegacy-root"
      data-analyticsid="alert-error"
      data-testid="alert-error"
      id="alert-error"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-true css-40g213-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-mcuokg-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item alert-icon css-19gcae9-MuiGridLegacy-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-1umw9bq-MuiSvgIcon-root"
              data-testid="ErrorIcon"
              focusable="false"
              id="error-icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
              />
            </svg>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true alert-text css-1s0jjal-MuiGridLegacy-root"
          >
            <b>
              There has been an error - 
            </b>
            <span
              data-testid="alert-message"
            >
              Trending works are temporarily unavailable
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component TopCitedPublications should render top cited publications with default width xs 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
    data-testid="standard-card"
    id="standard-card"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
      data-analyticsid="standard-card-content"
      data-testid="standard-card-content"
      id="standard-card-content"
    >
      <div
        class="MuiTabs-root css-1lco6rl-MuiTabs-root"
      >
        <div
          class="MuiTabs-scroller MuiTabs-fixed css-s2t35c-MuiTabs-scroller"
          style="overflow: hidden; margin-bottom: 0px;"
        >
          <div
            class="MuiTabs-list MuiTabs-flexContainer MuiTabs-centered css-1hqdth1-MuiTabs-list"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth Mui-selected css-1ib8lk2-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="0"
              type="button"
            >
              Trending
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-1ib8lk2-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              Scopus
            </button>
            <button
              aria-selected="false"
              class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-fullWidth css-1ib8lk2-MuiButtonBase-root-MuiTab-root"
              role="tab"
              tabindex="-1"
              type="button"
            >
              WOS
            </button>
          </div>
          <span
            class="MuiTabs-indicator css-s8ua9-MuiTabs-indicator"
            style="left: 0px; width: 0px;"
          />
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-tqtdln-MuiGridLegacy-root"
        style="margin-top: 24px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-j4livs-MuiTypography-root"
          >
            <div
              class="fez-icon altmetric xxlarge"
            />
            Altmetric score
          </h6>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
          style="margin-top: -12px;"
        >
          <button
            aria-label="Click for more information"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1a0ye8w-MuiButtonBase-root-MuiIconButton-root"
            data-analyticsid="help-icon"
            data-mui-internal-clone-element="true"
            data-testid="help-icon"
            id="help-icon"
            tabindex="0"
            type="button"
          >
            <svg
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-2y2fa1-MuiSvgIcon-root"
              data-testid="HelpOutlineIcon"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
              <title>
                Click for more information
              </title>
            </svg>
          </button>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          id="topCitedPublications"
          style="padding-top: 24px;"
        >
          <div
            class="MuiBox-root css-0"
            data-testid="search-results-publications-list"
            id="search-results-publications-list"
          >
            <div
              class="publicationCitation"
            >
              <div
                class="css-0"
                data-testid="publication-citation-parent-UQ:330391"
                id="publication-citation-parent-UQ:330391"
              >
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                        style="min-width: 1px;"
                      >
                        <h6
                          class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                        >
                          <a
                            href="/view/UQ:330391"
                          >
                            Development and implementation of papillomavirus prophylactic vaccines
                          </a>
                        </h6>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto citationMetrics css-e9j1q9-MuiGridLegacy-root"
                      >
                        <a
                          aria-label="Full citation in Altmetric will open in a new window"
                          class="css-1oqhn84"
                          data-analyticsid="my-trending-pubs-altmetric-link"
                          data-testid="my-trending-pubs-altmetric-link"
                          href="https://queensland.altmetric.com/details/101417"
                          id="my-trending-pubs-altmetric-link"
                          rel="noopener noreferrer"
                          tabindex="0"
                          target="_blank"
                          title="Full citation in Altmetric will open in a new window"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                            >
                              <h6
                                class="MuiTypography-root MuiTypography-h6 difference css-15rj26v-MuiTypography-root"
                                title="Difference in social media activities"
                              >
                                +
                                3
                              </h6>
                            </div>
                          </div>
                        </a>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                      >
                        <div
                          class="citationContent citationJournalArticle"
                        >
                          <span
                            class="citationAuthors"
                          >
                            <span
                              class="citationAuthor"
                              data-testid="rek-author-0"
                            >
                              Frazer, Ian H.
                            </span>
                             
                          </span>
                          <span
                            class="citationDate"
                          >
                            (
                            2014
                            ).
                          </span>
                          <span
                            class="citationTitle"
                          >
                             
                            Development and implementation of papillomavirus prophylactic vaccines
                            .
                          </span>
                          <span
                            class="citationJournalName"
                          >
                             
                            Journal of Immunology
                             
                          </span>
                          <span
                            class="citationVolumeNumber"
                          >
                             
                            192
                             
                          </span>
                          <span
                            class="citationIssueNumber"
                          >
                            (
                            9
                            ) 
                          </span>
                          <span
                            class="citationArticleNumber empty"
                          />
                          <span
                            class="citationPageRange"
                          >
                            <span
                              class="citationStartPage"
                            >
                              4007
                            </span>
                            -
                            <span
                              class="citationEndPage"
                            >
                              4011
                            </span>
                          </span>
                          <span>
                            . 
                          </span>
                          <span
                            data-testid="rek-doi"
                          >
                            <a
                              aria-label="Open this DOI in an new window"
                              class="citationDoiLink css-1oqhn84"
                              data-analyticsid="citation-doi-link"
                              data-testid="citation-doi-link"
                              href="https://doi.org/10.4049/jimmunol.1490012"
                              id="citation-doi-link"
                              rel="noopener noreferrer"
                              tabindex="0"
                              target="_blank"
                              title="Open this DOI in an new window"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
                                data-testid="OpenInNewIcon"
                                focusable="false"
                                id="citation-doi-link-new-window-icon"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                                />
                              </svg>
                              https://doi.org/10.4049/jimmunol.1490012
                            </a>
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                              >
                                <a
                                  aria-label="Full citation in Web of science will open in a new window"
                                  class="wosCitationCount css-si3g8d"
                                  data-analyticsid="wos-citation-count-link"
                                  data-testid="wos-citation-count-link"
                                  href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000334672800003"
                                  id="wos-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Web of science will open in a new window"
                                >
                                  <span
                                    class="fez-icon wos large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    12
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Scopus will open in a new window"
                                  class="scopusCitationCount css-si3g8d"
                                  data-analyticsid="scopus-citation-count-link"
                                  data-testid="scopus-citation-count-link"
                                  href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D2-s2.0-84899524861%26origin%3Dinward"
                                  id="scopus-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Scopus will open in a new window"
                                >
                                  <span
                                    class="fez-icon scopus large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    13
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Altmetric will open in a new window"
                                  class="altmetricCitationCount css-si3g8d"
                                  data-analyticsid="altmetric-citation-count-link"
                                  data-testid="altmetric-citation-count-link"
                                  href="https://queensland.altmetric.com/details/2291601"
                                  id="altmetric-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Altmetric will open in a new window"
                                >
                                  <span
                                    class="fez-icon altmetric large"
                                  />
                                  <span
                                    class="MuiBox-root css-19k1sqg"
                                  >
                                    5
                                  </span>
                                </a>
                                <a
                                  aria-label="Full citation in Google scholar will open in a new window"
                                  class="googleCitationCount css-si3g8d"
                                  data-analyticsid="google-citation-count-link"
                                  data-testid="google-citation-count-link"
                                  href="https://scholar.google.com/scholar?q=intitle:Development%20and%20implementation%20of%20papillomavirus%20prophylactic%20vaccines"
                                  id="google-citation-count-link"
                                  rel="noopener noreferrer"
                                  tabindex="0"
                                  target="_blank"
                                  title="Full citation in Google scholar will open in a new window"
                                >
                                  <span
                                    class="fez-icon google large"
                                  />
                                </a>
                                <span
                                  class="noOaIcon"
                                  data-testid="oa-n/a-icon"
                                />
                              </div>
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                              />
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
